# vlora

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  guide_ollama.md  guide_tgi.md  guide_vllm.md  index.md  launch_post.md  migration_from_peft.md  quickstart.md
examples/: axolotl_config.yml  basic_pipeline.py  hf_trainer_subspace.py  quickstart.ipynb  real_adapters.py
src/vlora/: __init__.py  _validate.py  analysis.py  cli.py  io.py  merge.py  model.py  ops.py  pipeline.py  router.py  subspace.py  training.py
src/vlora/integrations/: __init__.py  huggingface.py
tests/: test_analysis.py  test_backlog.py  test_cli.py  test_compression.py  test_huggingface.py  test_incremental.py  test_io.py  test_merge.py  test_model.py  test_ops.py  test_pipeline.py  test_router.py  test_subspace.py  test_training.py
