[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlora"
version = "0.1.0"
description = "Shared low-rank subspaces for efficient LoRA adapter management"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Tim Veseli" }]
keywords = ["lora", "llm", "parameter-efficient", "fine-tuning", "subspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "safetensors>=0.4",
    "numpy>=1.21",
]

[project.optional-dependencies]
hub = ["huggingface-hub>=0.20"]
dev = [
    "pytest>=7.0",
    "huggingface-hub>=0.20",
]

[project.urls]
Homepage = "https://github.com/tveseli/vlora"
Repository = "https://github.com/tveseli/vlora"

[tool.hatch.build.targets.wheel]
packages = ["src/vlora"]

[tool.pytest.ini_options]
testpaths = ["tests"]
