[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlora"
version = "0.2.0"
description = "Shared low-rank subspaces for efficient LoRA adapter management"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Tim Veseli" }]
keywords = ["lora", "llm", "parameter-efficient", "fine-tuning", "subspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "safetensors>=0.4",
    "numpy>=1.21",
    "click>=8.0",
]

[project.scripts]
vlora = "vlora.cli:cli"

[project.optional-dependencies]
hub = ["huggingface-hub>=0.20"]
hf = ["transformers>=4.38", "huggingface-hub>=0.20"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
dev = [
    "pytest>=7.0",
    "huggingface-hub>=0.20",
    "pre-commit>=3.0",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/tveseli/vlora"
Repository = "https://github.com/tveseli/vlora"

[tool.hatch.build.targets.wheel]
packages = ["src/vlora"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = true
check_untyped_defs = true
